--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ gunicorn==20.1.0
 h11==0.12.0
 h2==3.2.0
 h5py==2.10.0
-HeapDict @ file:///Users/ktietz/demo/mc3/conda-bld/heapdict_1630598515714/work
+HeapDict==1.0.1
 hpack==3.0.0
 html5lib==1.1
 httpcore==0.14.3
