--- a/requirements.txt
+++ b/requirements.txt
@@ -52,8 +52,7 @@ comtypes==1.1.10
 conda==3.0.6
 conda-build==2.1.5
 conda-content-trust==0.1.2
-conda-pack==0.6.0
-conda-verify==3.4.2
+conda-pack==0.6.0}
 contextlib2==21.6.0
 cookiecutter==1.7.3
 cryptography==0.1.8
