--- a/requirements.txt
+++ b/requirements.txt
@@ -219,7 +219,7 @@ pylint == 2.12.1
 pyls-spyder==0.4.0
 PyNaCl == 1.4.0
 pynndescent == 0.5.5
-pyodbc===4.0.0-unsupported
+pyodbc===4.0.32
 pyOpenSSL == 21.0.0
 pyparsing == 3.0.6
 pyqtgraph == 0.12.3
