--- a/requirements.txt
+++ b/requirements.txt
@@ -253,7 +253,7 @@ rsa == 4.8
 Rtree == 0.9.7
 scikit-image==0.18.3
 scikit-learn == 1.0.1
-scikit-learn-intelex==2021.20210714.120609
+scikit-learn-intelex==2021.2.3
 scipy == 1.7.3
 seaborn == 0.11.2
 Send2Trash == 1.8.0
